# Vikr

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: TODO.txt  configurable.cmake  glad.cmake  graphics.cmake  input.cmake  lighting.cmake  math.cmake  mesh.cmake  platform.cmake  renderer.cmake  resources.cmake  scene.cmake  shader.cmake  tools.cmake  util.cmake  vikr.cmake
libs/: Vikr - Shortcut.lnk
libs/GLFW/: glfw3.lib
libs/Vulkan/bin32/: VKstatic.1.lib  VkLayer_api_dump.lib  VkLayer_core_validation.lib  VkLayer_image.lib  VkLayer_object_tracker.lib  VkLayer_parameter_validation.lib  VkLayer_screenshot.lib  VkLayer_swapchain.lib  VkLayer_threading.lib  VkLayer_utils.lib  vulkan-1.lib
libs/Vulkan/bin64/: VKstatic.1.lib  VkLayer_api_dump.lib  VkLayer_image.lib  VkLayer_object_tracker.lib  VkLayer_parameter_validation.lib  VkLayer_screenshot.lib  VkLayer_threading.lib
libs/assimp/: assimp.lib
libs/models/: README.md
libs/models/sponza_cry/: sponza.mtl
libs/shader/GLSL/: directional_shadowdepth.frag  directional_shadowdepth.vert  font.frag  font.vert  gbuffer.frag  gbuffer.vert  light.frag  light.vert  lightpass.frag  lightpass.vert  point_shadow.frag  point_shadow.vert  point_shadow_depth.frag  point_shadow_depth.geo  point_shadow_depth.vert  screen_shader.frag  screen_shader.vert  shadowpass.frag  shadowpass.geo  shadowpass.vert  skybox.frag  skybox.vert  test.frag  test.glsl  test.vert
test/: CMakeLists.txt  main.cpp
test/opengl_testing/: CMakeLists.txt  main.cpp
test/vulkan_testing/: CMakeLists.txt  main.cpp
vikr-editor/: TODO.txt
vikr-editor/VikrEditor/: VikrEditor.pro  mainwindow.hpp
vikr-editor/build-VikrEditor-Desktop_Qt_5_6_0_MSVC2013_64bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
vikr-editor/build-VikrEditor-Desktop_Qt_5_6_0_MSVC2013_64bit-Debug/debug/: VikrEditor.ilk  moc_mainwindow.cpp
vikr-source/: TODO.txt  vikr.cpp  vikr.hpp
vikr-source/glad/: glad.c  glad.h
vikr-source/graphics/: buffer.hpp  command_buffer.cpp  command_buffer.hpp  framebuffer.hpp  graphics_command.cpp  graphics_command.hpp  pipeline_state.hpp  render_context.hpp  render_device.hpp  render_pass.hpp  render_target.cpp  render_target.hpp  topology.hpp  vertexbuffer.hpp  viewport.hpp
vikr-source/graphics/gl4/: gl4_buffer.cpp  gl4_buffer.hpp  gl4_commandbuffer.cpp  gl4_commandbuffer.hpp  gl4_context.cpp  gl4_context.hpp  gl4_device.cpp  gl4_device.hpp  gl4_framebuffer.cpp  gl4_framebuffer.hpp  gl4_graphics_command.hpp  gl4_pipeline_state.cpp  gl4_pipeline_state.hpp  gl4_renderpass.cpp  gl4_renderpass.hpp  gl4_rendertarget.cpp  gl4_rendertarget.hpp  gl4_vertexbuffer.hpp
vikr-source/graphics/vk/: vk_context.cpp  vk_context.hpp  vk_device.cpp  vk_device.hpp  vk_instance.cpp  vk_instance.hpp  vk_logdevice.cpp  vk_logdevice.hpp  vk_phydevice.cpp  vk_phydevice.hpp  vk_pipeline_state.hpp  vk_surface.cpp  vk_surface.hpp  vk_vertexbuffer.hpp
vikr-source/include/vikr/: test.txt  vikr.hpp
vikr-source/input/: keyboard.cpp  keyboard.hpp  mouse.cpp  mouse.hpp  window.cpp  window.hpp
vikr-source/lighting/: directional_light.cpp  directional_light.hpp  light.hpp  point_light.cpp  point_light.hpp  spot_light.hpp
vikr-source/math/: vikr_math.hpp
vikr-source/math/alg/: mat.hpp  vect.hpp
vikr-source/math/shape/: cube.cpp  cube.hpp  quad.cpp  quad.hpp  sphere.cpp  sphere.hpp
vikr-source/mesh/: imesh.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  vertex.hpp
vikr-source/mesh/opengl/: glmesh.cpp  glmesh.hpp
vikr-source/platform/: vikr_api.hpp  vikr_time.cpp  vikr_time.hpp  vikr_types.hpp
vikr-source/platform/graphics/: graphics.hpp  opengl.hpp  vk.hpp
vikr-source/platform/win32/: win32_config.hpp
vikr-source/renderer/: blendmode.hpp  cullmode.hpp  depthmode.hpp  framebuffer.hpp  glrenderer.cpp  glrenderer.hpp  group_command.cpp  group_command.hpp  irenderer.hpp  mesh_command.cpp  mesh_command.hpp  pass.hpp  primitive_command.hpp  program_state.hpp  render_command.cpp  render_command.hpp  render_command_types.hpp  render_group.hpp  render_queue.cpp  render_queue.hpp  render_target.cpp  render_target.hpp  renderer.cpp  renderer.hpp  shadowmap.hpp  stencildepth.hpp  viewport.hpp  vkrenderer.hpp
vikr-source/renderer/command/: camera_command.hpp  debug_command.hpp  group_command.cpp  group_command.hpp  light_command.hpp  manual_commands.hpp  material_command.hpp  mesh_command.cpp  mesh_command.hpp  primitive_command.hpp  render_command.cpp  render_command.hpp  render_command_types.hpp  transform_command.hpp
vikr-source/renderer/opengl/: gl_framebuffer.cpp  gl_framebuffer.hpp  gl_rendertarget.cpp  gl_rendertarget.hpp  glrenderer.cpp  glrenderer.hpp
vikr-source/renderer/specific/: README.md
vikr-source/renderer/vulkan/: vkrenderer.cpp  vkrenderer.hpp
vikr-source/resources/: model_loader.cpp  model_loader.hpp  resource_manager.cpp  resource_manager.hpp  resources.hpp
vikr-source/resources/opengl/: gl_resource_manager.cpp  gl_resource_manager.hpp  gl_resources.cpp  gl_resources.hpp
vikr-source/resources/vulkan/: vk_deallocator.hpp  vk_memorymanager.hpp
vikr-source/scene/: camera.cpp  camera.hpp  first_person_camera.cpp  first_person_camera.hpp  guid_generator.cpp  guid_generator.hpp  icamera.hpp  material_node.hpp  mesh_node.hpp  scene.cpp  scene.hpp  scene_node.cpp  scene_node.hpp  scene_obj.cpp  scene_obj.hpp  texture_node.hpp  transform.cpp  transform.hpp  viewport.hpp
vikr-source/scene/components/: camera_component.cpp  camera_component.hpp  light_component.hpp  mesh_component.cpp  mesh_component.hpp  renderer_component.cpp  renderer_component.hpp  (+4 more)
vikr-source/shader/: cubemap.hpp  gl_shader.cpp  gl_shader.hpp  ishader.hpp  itexture.hpp  material.cpp  material.hpp  shader.cpp  shader.hpp  shader_compiler.hpp  shader_config.hpp  shader_linker.hpp  shader_parser.hpp  shader_uniform_params.hpp  texture.cpp  texture.hpp  texture1d.hpp  texture2d.hpp  texture3d.hpp  texture_config.hpp  vk_shader.hpp
vikr-source/src/: vikr.cpp
vikr-source/util/: vikr_assert.hpp  vikr_filesystem.hpp  vikr_log.cpp  vikr_log.hpp
(+300 files in other folders)
